fix: no results in dark mode

--- a/src/less/components/settings-electron.less
+++ b/src/less/components/settings-electron.less
@@ -99,6 +99,10 @@
   // Dark theme overrides
   .bp3-dark & {
     .electron-versions-table {
+      .no-versions {
+        color: @foreground-1;
+      }
+
       .electron-versions-header {
         background-color: @dark-gray5;
         border-bottom-color: @dark-gray4;
